// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/posts/linkedin PublishPost post with a link works 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:6905136744035889154",
    "url": "https://www.linkedin.com/feed/update/urn:li:activity:6905136744518225921",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost post with images keeps the link if media is present 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:6905136788382261248",
    "url": "https://www.linkedin.com/feed/update/urn:li:activity:6905136788935901185",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost post with images uploads and posts media 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:6905136774197100544",
    "url": "https://www.linkedin.com/feed/update/urn:li:activity:6905136774872383488",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost text-only post works 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:6905136739719938048",
    "url": "https://www.linkedin.com/feed/update/urn:li:activity:6905136740177121281",
  },
}
`;
